# qwc-print-service

./: .gitignore  Dockerfile  README.md  external_ows_layers.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: main.yml
schemas/: qwc-print-service.json
src/: external_ows_layers.py  server.py
tests/: api_tests.py
