[project]
name = "qwc-print-service"
version = "v2025.10.14"
description = "QWC Print service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.0.0",
    "Werkzeug~=3.1.4",
    "flask-restx~=1.3.0",
    "Flask-JWT-Extended~=4.6.0",
    "psycopg2~=2.9.9",
    "requests~=2.32.0",
    "qwc-services-core~=1.4.0"
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
